tests/sumo/errors/begin_after_end/options.sumo
-n net.net.xml --route-files input_routes.rou.xml --begin 10 --end 1

